force-app/main/default/objects/Job_Execution__c/fields/Batch_Definition__c.field-meta.xml
<CustomField>
    <fullName>Batch_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the batch which is required to be executed</description>
    <label>Batch Definition</label>
    <referenceTo>Batch_Definition__c</referenceTo>
    <relationshipLabel>Job Executions</relationshipLabel>
    <relationshipName>Job_Executions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>