force-app/main/default/objects/Job_Execution__c/fields/Cancel_reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_reason__c</fullName>
    <description>Reason to cancel a schedule or a job execution</description>
    <label>Cancel reason</label>
    <type>TextArea</type>
</CustomField>