force-app/main/default/objects/Job_Execution__c/fields/Execute__c.field-meta.xml
<CustomField>
    <fullName>Execute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to check whether to execute the job</description>
    <label>Execute</label>
    <type>Checkbox</type>
</CustomField>