force-app/main/default/objects/Job_Execution__c/fields/Job_Execution__c.field-meta.xml
<CustomField>
    <fullName>Job_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Job Execution</label>
    <referenceTo>Job_Execution__c</referenceTo>
    <relationshipLabel>Job Executions</relationshipLabel>
    <relationshipName>Job_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>