force-app/main/default/objects/Job_Execution__c/fields/Run_With_Defaults__c.field-meta.xml
<CustomField>
    <fullName>Run_With_Defaults__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this field is true the batch filter condition will be the same that we have on the batch definition object for the same Job name, this will call a trigger that will copy the filter logic and the filter condition records
Others: Default True</description>
    <label>Run With Defaults</label>
    <type>Checkbox</type>
</CustomField>